src/test/ui/consts/min_const_fn/cmp_fn_pointers.stderr
error: function pointers in const fn are unstable
  --> $DIR/cmp_fn_pointers.rs:1:14
   |
LL | const fn cmp(x: fn(), y: fn()) -> bool { //~ ERROR function pointers in const fn are unstable
   |              ^

error: aborting due to previous error

